updatted jquery https:

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
         NAVGOCO 
         NAVGOCO -->
     <!-- Load JQuery -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Load jquery - COOKIE plugin -->
     <script type="text/javascript" src="{{ '/assets/navgoco/jquery.cookie.js' | absolute_url }}"></script>
     <!-- Load jquery - NAVGOCO plugin - JAVASCRIPT -->
