--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,12 @@
     <link rel="stylesheet" href="{{ '/assets/css/just-the-docs.css' | absolute_url }}">
     <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | absolute_url }}"></script>
     <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | absolute_url }}"></script>
-   <!---------
-        NAVGOCO 
-        NAVGOCO -->
+    
+    <!-- RIGHT SIDEBAR -->
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/right-sidebar/right-sidebar.css' | absolute_url }}">
+    <!-- END RIGHT SIDEBAR -->
+
+   <!-- NAVGOCO -->
     <!-- Load JQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Load jquery - COOKIE plugin -->
@@ -24,7 +27,7 @@
     <script type="text/javascript" src="{{ '/assets/navgoco/jquery.navgoco.js' | absolute_url }}"></script>
     <!-- Load jquery - NAVGOCO plugin -  CSS - I'VE PUT THIS CSS in /assets/nav.css
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/navgoco/jquery.navgoco.css' | absolute_url }}" /> 
-    <!--END-->
+    <!-- END NAVGOCO -->
     
     <!--NAV - CSS - FOR JUST-THE-DOCS AND NAVGOCO -->
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/nav.css' | absolute_url }}">
