Finally Have RIght Sidebar

--- a/_includes/rightsidebar.html
+++ b/_includes/rightsidebar.html
@@ -140,7 +140,7 @@
        * NOTE: Use "true" to set the sidebar to be open by default, and "false" to set
        *       it to be closed by default.
        */
-      var openSidebarOnLoad = true;
+      var openSidebarOnLoad = false;
 
       // -----------------------------------------------------------------------------
 
