--- a/assets/right-sidebar/right-sidebar-&-layout.css
+++ b/assets/right-sidebar/right-sidebar-&-layout.css
@@ -222,7 +222,9 @@ button.right-sidebar-toggle {
    line-height: 20px;
    z-index: 2147483647;
    border: 0;
-   height: 93.7vh;
+   height: 99.9vh;
+   position:fixed;
+   top:0;
    width: 100%;
 }
 
