--- a/assets/css/dark-mode-preview.css
+++ b/assets/css/dark-mode-preview.css
@@ -266,7 +266,8 @@
 }
 @media (min-width: 66.5rem) {
    .main-content {
-      margin-left: calc((100% - 1350px) / 2 + 264px);
+       margin-left:248px;
+       /*margin-left: calc((100% - 1350px) / 2 + 264px);*/
    }
 }
 .js-main-content:focus {
