--- a/assets/css/just-the-docs.css
+++ b/assets/css/just-the-docs.css
@@ -267,8 +267,8 @@
 }
 @media (min-width: 66.5rem) {
    .main-content {
-       margin-left:248px;
-      /*margin-left: calc((100% - 1350px) / 2 + 264px);*/
+      margin-left: calc((100% - 1370px) / 5 + 294px)
+
    }
 }
 
