--- a/assets/css/for-ads/ad-dark-mode-preview.css
+++ b/assets/css/for-ads/ad-dark-mode-preview.css
@@ -3,6 +3,7 @@
  ******************************
  MIDDLE SECTION JAVASCRIPT STYLES
  ******************************
+ ******************************
  ******************************/
 @media (min-width: 50rem) {
     .main-content {
