--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 
         <div class="main-content-wrap js-main-content" tabindex="0">
             <div class="main-content" id="js-left-pushed-content">
-                <div class="page-header js-page-header">
+                <div class="page-header js-page-header" id="js-push-content">
                     {% if site.search_enabled != false %}
                     <div class="search">
                         <div class="search-input-wrap">
@@ -94,7 +94,7 @@
 
                 <!-----MIDDLE SECTION----->
                 <!-----MIDDLE SECTION----->
-                <div class="page" id="js-push-content">
+                <div class="page default-layout" id="js-push-content">
                     {% unless page.url == "/" %}
                     {% if page.parent %}
                     <nav class="breadcrumb-nav">
