--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
 
                 <!-----MIDDLE SECTION----->
                 <!-----MIDDLE SECTION----->
-                <div class="page default-layout" id="js-push-content">
+                <div class="page" id="js-push-content">
                     {% unless page.url == "/" %}
                     {% if page.parent %}
                     <nav class="breadcrumb-nav">
