--- a/_layouts/page-layout-1.html
+++ b/_layouts/page-layout-1.html
@@ -45,7 +45,7 @@ layout: table_wrappers
          <div class="main-content">
 
             <!-- MIDDLE SECTION -->
-            <div class="page" id="js-push-content">
+            <div class="page ad-layout" id="js-push-content">
                {% unless page.url == "/" %}
                {% if page.parent %}
                <nav class="breadcrumb-nav">
