--- a/_layouts/ad-layout.html
+++ b/_layouts/ad-layout.html
@@ -1,6 +1,3 @@
----
-layout: table_wrappers
----
 
 <!DOCTYPE html>
 
@@ -9,7 +6,32 @@ layout: table_wrappers
 <!-- RIGHT SIDEBAR (INCLUDING JAVASCRIPT) -->
 {% include head.html %}
 <!-- END RIGHT SIDEBAR -->
+<script>
+    /*
+     * Maintain & keep scroll position after post-back & postback & refresh.
+     * Just include this js file (no need for cookies).
+     *
+     * Author: Evalds Urtans
+     * Website: http://www.evalds.lv
+     */
 
+    document.addEventListener('DOMContentLoaded', function() {
+        var sep = '\uE000'; // an unusual char: unicode 'Private Use, First'
+
+        window.addEventListener('pagehide', function(e) {
+            window.name += sep + window.pageXOffset + sep + window.pageYOffset;
+        });
+
+        if (window.name && window.name.indexOf(sep) > -1) {
+            var parts = window.name.split(sep);
+            if (parts.length >= 3) {
+                window.name = parts[0];
+                window.scrollTo(parseFloat(parts[parts.length - 2]), parseFloat(parts[parts.length - 1]));
+            }
+        }
+    });
+
+</script>
 <body>
       <!--MAIN CSS STYLE SHEETS -->
     <link id="style-light" rel="stylesheet" href="{{ '/assets/css/for-ads/ad-just-the-docs.css' | absolute_url }}">
