--- a/_layouts/default-scroll-test.html
+++ b/_layouts/default-scroll-test.html
@@ -17,7 +17,7 @@
         </symbol>
     </svg>
 
-    <div class="">
+    <div class="page-wrap">
 
         <!-----LEFT SIDEBAR----->
         <!-----LEFT SIDEBAR----->
