--- a/assets/css/docs-css/persuasion-hitman-css/dark-mode-preview.css
+++ b/assets/css/docs-css/persuasion-hitman-css/dark-mode-preview.css
@@ -8432,7 +8432,7 @@ li.important-point-excerpt {
 .important-point-excerpt .important-callout {
     font-family: Messinasansweb;
     border-radius: 3px;
-    background-color: #19191A;
+    background-color: #1C1C20;
     padding: 0px 4px 1px 8px;
     font-size: 11px;
     display: block;
