--- a/_layouts/ad-layout.html
+++ b/_layouts/ad-layout.html
@@ -33,9 +33,17 @@
 
 </script>
 <body>
-      <!--MAIN CSS STYLE SHEETS -->
-    <link id="style-light" rel="stylesheet" href="{{ '/assets/css/for-ads/ad-just-the-docs.css' | absolute_url }}">
-    <link id="style-dark" rel="stylesheet" href="{{ '/assets/css/for-ads/ad-dark-mode-preview.css' | absolute_url }}">
+    
+    <!--FOR CLASSIC ADS - CSS STYLE SHEETS -->
+    <!--FOR CLASSIC ADS - CSS STYLE SHEETS -->
+    <!--FOR CLASSIC ADS - CSS STYLE SHEETS -->
+    <link id="style-light" rel="stylesheet" href="{{ '/assets/css/classic-ads/ad-light-mode.css' | absolute_url }}">
+    <link id="style-dark" rel="stylesheet" href="{{ '/assets/css/classic-ads/ad-dark-mode.css' | absolute_url }}">
+    
+    <!--MAIN CSS STYLE SHEETS -->
+    <!--MAIN CSS STYLE SHEETS -->
+    <link rel="stylesheet" href="{{ '/assets/css/for-ads/ad-dark-mode-preview.css' | absolute_url }}">
+    
     <!--MAIN CSS STYLE SHEETS -->
    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
       <symbol id="link" viewBox="0 0 16 16">
