--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,10 +36,11 @@
       {%- endunless -%}
       {%- endfor -%}
   </ul>
+
   <script type="text/javascript">
       $(document).ready(function() {
           $('#navsmigoco').navgoco({
-              caretHtml: '<i class="some-random-icon-class"></i>',
+              caretHtml: '<svg class="navgoco-arrow" width="54" height="32" viewBox="0 0 54 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path class="svg-arrow" d="M31.4426 29.4261L52.1798 8.68891C53.8536 7.01503 53.8536 4.30114 52.1798 2.62727C50.5059 0.953391 47.792 0.953388 46.1181 2.62726L29.1931 19.5522C28.091 20.6543 26.3041 20.6543 25.202 19.5522L7.96234 2.31274C6.15871 0.509137 3.23717 0.500476 1.42288 2.29335C-0.4067 4.10134 -0.415455 7.05293 1.40337 8.87175L21.9577 29.4261C24.5769 32.0453 28.8234 32.0453 31.4426 29.4261Z" fill="#888888" /></svg>',
               accordion: true,
               openClass: 'open',
               save: true,
