--- a/_includes/head-for-ad.html
+++ b/_includes/head-for-ad.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>{{ page.title }} - {{ site.title }}</title>
 
     <meta name="Description" content="{{ page.description }}">
