--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
     <title>{{ page.title }} - {{ site.title }}</title>
 
     <meta name="Description" content="{{ page.description }}">
+    <meta name="mobile-web-app-capable" content="yes">
 
     <link rel="shortcut icon" href="{{ 'favicon.ico' | absolute_url }}" type="image/x-icon">
     
