--- a/_includes/head-ago-pages-1.html
+++ b/_includes/head-ago-pages-1.html
@@ -8,6 +8,7 @@
 
     <meta name="Description" content="{{ page.description }}">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="{{ '/assets/manifest/marketmann.manifest' | absolute_url }}">
 
     <link rel="shortcut icon" href="{{ 'favicon.ico' | absolute_url }}" type="image/x-icon">
     
