--- a/_includes/head-for-ad.html
+++ b/_includes/head-for-ad.html
@@ -4,22 +4,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
-    <meta name="mobile-web-app-capable" content="yes">
     <title>{{ page.title }} - {{ site.title }}</title>
-
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="{{ '/assets/manifest/marketmann.manifest' | absolute_url }}">
+    
     <meta name="Description" content="{{ page.description }}">
 
     <link rel="shortcut icon" href="{{ 'favicon.ico' | absolute_url }}" type="image/x-icon">
-    
-    
+
+
     <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | absolute_url }}"></script>
     <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | absolute_url }}"></script>
-    
+
     <!-- RIGHT SIDEBAR -->
     <link rel="stylesheet" type="text/css" href="{{ '/assets/right-sidebar/right-sidebar-&-layout.css' | absolute_url }}">
     <!-- END RIGHT SIDEBAR -->
 
-   <!-- NAVGOCO -->
+    <!-- NAVGOCO -->
     <!-- Load JQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Load jquery - COOKIE plugin -->
@@ -29,7 +30,7 @@
     <!-- Load jquery - NAVGOCO plugin -  CSS - I'VE PUT THIS CSS in /assets/nav.css
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/navgoco/jquery.navgoco.css' | absolute_url }}" /> 
     <!-- END NAVGOCO ------>
-    
+
     <!--NAV - CSS - FOR JUST-THE-DOCS AND NAVGOCO -->
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/navgoco.css' | absolute_url }}">
     <!--END-->
