--- a/_includes/head-for-fb-ads.html
+++ b/_includes/head-for-fb-ads.html
@@ -5,6 +5,7 @@
     <meta name="googlebot" content="noindex">
     <meta name="robots" content="noindex">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="{{ '/assets/manifest/marketmann.manifest' | absolute_url }}">
     <title>{{ page.title }} - {{ site.title }}</title>
 
     <meta name="Description" content="{{ page.description }}">
