--- a/_layouts/default-breakthrough.html
+++ b/_layouts/default-breakthrough.html
@@ -7,8 +7,8 @@
 <body>
 
     <!--MAIN CSS STYLE SHEETS -->
-    <link id="style-light" rel="stylesheet" href="{{ '/assets/css/breakthrough/just-the-docs.css' | absolute_url }}">
-    <link id="style-dark" rel="stylesheet" href="{{ '/assets/css/breakthrough/dark-mode-preview.css' | absolute_url }}">
+    <link id="style-light" rel="stylesheet" href="{{ '/assets/css/breakthrough/breakthrough-just-the-docs.css' | absolute_url }}">
+    <link id="style-dark" rel="stylesheet" href="{{ '/assets/css/breakthrough/breakthrough-dark-mode-preview.css' | absolute_url }}">
     <!--MAIN CSS STYLE SHEETS -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="link" viewBox="0 0 16 16">
@@ -119,7 +119,8 @@
                 <!-----RIGHT SIDEBAR----->
                 <!-----RIGHT SIDEBAR----->
                 {% include rightsidebar.html %}
-
+                <!-----END RIGHT SIDEBAR----->
+                <!----- END RIGHT SIDEBAR----->
 
             </div>
         </div>
