--- a/assets/right-sidebar/right-sidebar-&-layout.css
+++ b/assets/right-sidebar/right-sidebar-&-layout.css
@@ -406,7 +406,7 @@ button.left-sidebar-toggle {
     z-index: 1;
     top: 0px;
     right: -400px;
-    background-color: hsl(252, 6.17%, 17.1%);
+    background-color: transparent !important;
     border-left: 1px solid hsl(252, 0.17%, 0%);
     overflow-x: hidden;
     transition: 0.35s;
