--- a/_layouts/default-breakthrough.html
+++ b/_layouts/default-breakthrough.html
@@ -118,7 +118,7 @@
 
                 <!-----RIGHT SIDEBAR----->
                 <!-----RIGHT SIDEBAR----->
-                {% include rightsidebar-breakthrough.html %}
+                {% include rightsidebar-black.html %}
                 <!-----END RIGHT SIDEBAR----->
                 <!----- END RIGHT SIDEBAR----->
 
