--- a/assets/images/breakthrough-advertising-assets/SMI-BA-stylesheet.css
+++ b/assets/images/breakthrough-advertising-assets/SMI-BA-stylesheet.css
@@ -10,6 +10,12 @@ p {
     hyphens: auto;
     line-height: 1.475em !important;
 }
+
+@media (max-width: 550px) {
+    body {
+        font-size:1.4em !important;
+    }
+}
 a {
     color: black;
 }
