--- a/assets/css/breakthrough/breakthrough-dark-mode-preview.css
+++ b/assets/css/breakthrough/breakthrough-dark-mode-preview.css
@@ -58,7 +58,7 @@
         z-index: 101;
         height: 60px;
         max-height: 60px;
-        border-bottom: 1px solid hsl(240, 6.17%, 20%);
+        border-bottom: 1px solid hsl(240, 6.17%, 10%);
     }
 }
 
@@ -8169,7 +8169,9 @@ body p, body div {
 
 
 
-
+.darkMode {
+ color: hsl(0, 0%, 81.45%) !important;
+}
 
 .darkMode b {
   color: hsl(0, 0%, 90%) !important;
@@ -8180,7 +8182,13 @@ body p, body div {
   -webkit-font-smoothing: subpixel-antialiased !important;
 }
 
-.darkMode h1, .darkMode h2, .darkMode h3, .darkMode h4, .darkMode h5, .darkMode {
+.darkMode p strong, .darkMode p b, .darkMode ol li strong, .darkMode ol li b, .darkMode ul li strong, .darkMode ul li b {
+    font-weight:600;
+}
+
+
+
+.darkMode h1, .darkMode h2, .darkMode h3, .darkMode h4, .darkMode h5 {
   color: white !important;
 }
 .darkMode .ordered-list-spoof-left, .darkMode ul li:before, .darkMode ol li:before {
@@ -8256,7 +8264,12 @@ COPY SWIPE EXAMPLE BLOCKS
   -webkit-text-stroke-color: hsl(0, 0%, 95%) !important;
 }
 .darkMode .copy-swipe-example-caslon-centered, .darkMode .copy-swipe-example-caslon, .darkMode .block_26 {
-    color: hsl(0, 0%, 94%) !important;
+    color: hsl(0, 0%, 97%) !important;
+}
+
+.red-number {
+color: hsl(1.87, 81%, 50%);
+font-weight: 900;
 }
 
 .darkMode .irvin-heading, .darkMode .drop-number {
