--- a/_includes/head-ago-pages-1.html
+++ b/_includes/head-ago-pages-1.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | absolute_url }}"></script>
     
     <!-- RIGHT SIDEBAR -->
-    <link rel="stylesheet" type="text/css" href="{{ '/assets/right-sidebar/right-sidebar-&-layout.css' | absolute_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/right-sidebar/right-sidebar-&-layout-original.css' | absolute_url }}">
     <!-- END RIGHT SIDEBAR -->
 
    <!-- NAVGOCO -->
