--- a/_layouts/ad-layout.html
+++ b/_layouts/ad-layout.html
@@ -4,7 +4,7 @@
 <html lang="en/us">
 
 <!-- RIGHT SIDEBAR (INCLUDING JAVASCRIPT) -->
-{% include head.html %}
+{% include head-for-ad.html %}
 <!-- END RIGHT SIDEBAR -->
 <body>
     
